# Intelligent-Business-Analysis-Using-Free-Tier-LLMs

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DEV_CHECKLIST.md  LOCAL_DEVELOPMENT.md  README.md  README_Streamlit_Cloud.md  SECRETS_SETUP_GUIDE.md  STREAMLIT_CLOUD_DEPLOYMENT.md  STREAMLIT_ENV_SETUP.md  UI_STREAMLINING_SUMMARY.md  launch.sh  local_secrets_template.toml  pyproject.toml  requirements-dev.txt  requirements.txt  run_local.py  start_streamlit.py  streamlit_aliases.sh  streamlit_app.py  streamlit_secrets_template.toml
.streamlit/: config.toml  secrets.toml.example
config/: app_config.yaml  automated_eval_config.yaml  evaluation_config.yaml  evaluation_rules.yaml  llm_config.yaml  logging_config.yaml  model_metadata.yaml  rate_limit_config.yaml
data/: enhanced_blind_responses.json  fixed_blind_responses.json
docs/: AUTOMATED_EVALUATOR_GUIDE.md  Dataset_Context_Implementation.md  EvaluationSummary.md  PORT_MANAGEMENT.md  Project_Overview_Update.md  Streamlined_Blind_Evaluation.md  TESTING_GUIDE.md  api_documentation.md  data_schema.md  deployment_guide.md  evaluation_system_guide.md  model_configuration.md  system_architecture.md  system_capabilities.md  technical_methodology.md  unified_architecture.md
pages/: 1_Blind_Evaluation.py  4_Model_Performance_Dashboard.py  Batch_RAG_Test.py
scripts/: analyze_health_checks.py  automated_llm_evaluator.py  check_openrouter_models.py  clean_pre_generated_responses.py  cleanup_testing_data.sh  consolidate_logs_to_csv.py  continuous_evaluation.py  deploy.py  deploy_research_system.sh  (+32 more)
(+59 files in other folders)
